# fast_zero

./: pyproject.toml
tests/: test_aap.py
